fixed order table styling on smaller screens, so that it shows up in a user friendly manner, all user side styling for smaller screens is now finished

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -213,6 +213,49 @@
   }
 }
 
+@media (max-width: 750px) {
+  table,
+  thead,
+  tbody,
+  th,
+  td,
+  tr {
+    display: block;
+  }
+
+  thead th {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+
+  .order-table td:nth-of-type(1):before {
+    content: 'Tour:';
+    margin-right: 1rem;
+  }
+  .order-table td:nth-of-type(2):before {
+    content: 'Destination:';
+    margin-right: 1rem;
+  }
+  .order-table td:nth-of-type(3):before {
+    content: 'Price:';
+    margin-right: 1rem;
+  }
+  .order-table td:nth-of-type(4):before {
+    content: 'Duration:';
+    margin-right: 1rem;
+  }
+  .order-table td:nth-of-type(5):before {
+    content: 'Difficulty:';
+    margin-right: 1rem;
+  }
+
+  .order-table td:nth-of-type(6):before {
+    content: 'Start Date:';
+    margin-right: 1rem;
+  }
+}
+
 @media (max-width: 500px) {
   .facts-container .facts {
     font-size: 1rem;
